--- a/crs_application/config/main/crs.yaml
+++ b/crs_application/config/main/crs.yaml
@@ -44,6 +44,7 @@ crs:
     target_frame_id: "world"
     part_file: ""      # relative to known data directory
     toolpath_file: ""  # relative to known data directory
+    toolpath_edge_buffer: 0.15
   part_rework: 
     scan_poses:
       - pose: [-0.869, -0.397, 1.559, -3.1289652, 0.6427091, 3.1099935]
