--- a/crs_process_data/data/main/toolpaths/part_5/crs.yaml
+++ b/crs_process_data/data/main/toolpaths/part_5/crs.yaml
@@ -4,56 +4,51 @@ crs:
     pre_move_home: false
     home_position:
       joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
-      joint_position: [-0.9644, -1.3617, 2.0724, -0.7108, -0.9640, 0.7994]
+      joint_position: [-1.8444, -1.85261, -1.6167, -1.6665, 0.8773, -0.9489]
     process_path:
-      tool_speed: 0.1
+      tool_speed: 0.05
       offset_pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-      retreat_dist: 0.03
-      approach_dist: 0.03
+      retreat_dist: 0.025
+      approach_dist: 0.025
       tool_frame: sander_center_link
       target_force: 15
     media_change:
-      change_time: 300.0
-      change_pose: [-0.381, -0.202, 1.5, 0.0, -0.786, 1.57]
+      change_time: 1200.0
       joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
-      joint_position: []
+      joint_position: [-0.02467, -1.7719, -1.8680, -0.6212, 0.90265, -2.2430]
     preview:
       time_scaling: 4.0
   scan_acquisition:
     scan_poses:
-      - pose: [-1.444, -0.322, 1.495, 2.5029407, 0.9721462, -2.3962962]
-      - pose: [-0.869, -0.397, 1.559, -3.1289652, 0.6427091, 3.1099935]
-      - pose: [0.005, 0.621, 1.534, -2.6741055, -0.6119461, -1.9862345]
-      - pose: [-0.348, -0.211, 1.555, -2.2509677, -0.1362007, -3.0876068]
-      - pose: [0.036, 0.258, 1.549, -2.4653191, -0.7150566, 2.9155958]
-      - pose: [-0.201, -0.062, 1.604, 2.4117773, -0.3157807, -2.7579127]
-      - pose: [-0.045, 0.794, 1.580, 2.3330813, -0.3216955, -2.8142385]
+      - pose: [-1.483, -0.229, 1.735, 2.797, 1.17, -2.43]
+      - pose: [-1.527, -0.239, 1.731, 2.74, 0.66, -2.79]
+      - pose: [-1.698, 0.357, 1.445, 2.955, 0.904, -1.36]
     tool_frame: camera_link_optical
     skip_on_failure: true
   process_execution:
-    time_tolerance: 5.0
+    time_tolerance: 120.0
     joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035]
-    cartesian_path_tolerance: [0.015, 0.015, 0.025, 0.15, 0.15, 0.15]
-    cartesian_goal_tolerance: [0.01, 0.01, 0.01, 0.05, 0.05, 0.05]
-    force_tolerance: 10
-    force_controlled_trajectories: true
+    cartesian_path_tolerance: [0.015, 0.015, 0.035, 0.15, 0.15, 0.15]
+    cartesian_goal_tolerance: [0.01, 0.01, 0.025, 0.05, 0.05, 0.05]
+    force_tolerance: 5
+    force_controlled_trajectories: false
     ur_tool_change_script: simpleMove.urp
     execute_tool_change: false
   part_registration:
-    simulation_pose: [-0.22, 0.0, 1.0, 0.0, 0.0, 0.3]
-    seed_pose: [-0.22, 0.0, 0.96, 0.0, 0.0, 0.32]
+    simulation_pose: [-0.55, 0.0, 0.98, 0.0, 0.0, -2.8]
+    seed_pose: [-0.55, 0.0, 0.98, 0.0, 0.0, -2.8]
+    #seed_pose: [-0.75, 0.0, 1.1, 0.0, 0.0, -2.8]
     target_frame_id: world
     part_file: ""
     toolpath_file: ""
+    toolpath_edge_buffer: 0.15
   part_rework:
     scan_poses:
-      - pose: [-1.444, -0.322, 1.495, 2.5029407, 0.9721462, -2.3962962]
-      - pose: [-0.869, -0.397, 1.559, -3.1289652, 0.6427091, 3.1099935]
-      - pose: [0.005, 0.621, 1.534, -2.6741055, -0.6119461, -1.9862345]
-      - pose: [-0.348, -0.211, 1.555, -2.2509677, -0.1362007, -3.0876068]
-      - pose: [0.036, 0.258, 1.549, -2.4653191, -0.7150566, 2.9155958]
-      - pose: [-0.201, -0.062, 1.604, 2.4117773, -0.3157807, -2.7579127]
-      - pose: [-0.045, 0.794, 1.580, 2.3330813, -0.3216955, -2.8142385]
+      - pose: [0.0, -0.50, 1.7, 0.0, -2.35619, 1.57]
+      - pose: [0.0, -0.25, 1.7, 0.0, -2.35619, 1.57]
+      - pose: [0.0, -0.10, 1.7, 0.5, -2.35619, 1.57]
+      - pose: [0.0, 0.0, 1.7, 0.0, -2.35619, 1.57]
+      - pose: [0.0, 0.1, 1.7, -0.8, -2.35619, 1.57]
     tool_frame: camera_link_optical
     pre_acquisition_pause: 2.0
     skip_on_failure: true
