--- a/crs_process_data/data/main/toolpaths/part_3/crs.yaml
+++ b/crs_process_data/data/main/toolpaths/part_3/crs.yaml
@@ -36,7 +36,7 @@ crs:
     cartesian_path_tolerance: [0.015, 0.015, 0.025, 0.15, 0.15, 0.15]
     cartesian_goal_tolerance: [0.01, 0.01, 0.01, 0.05, 0.05, 0.05]
     force_tolerance: 10
-    force_controlled_trajectories: true
+    force_controlled_trajectories: false
     ur_tool_change_script: simpleMove.urp
     execute_tool_change: false
   part_registration:
